files/dns-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns-lan
  namespace: kube-system
  labels:
    k8s-app: kube-dns-lan
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "KubeDNSLan"
spec:
  selector:
    k8s-app: kube-dns-lan
#  clusterIP: 10.3.0.10
  ports:
  - name: dns
    port: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    protocol: TCP
